# carbon-files

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  llms-full.txt  llms.txt
.github/workflows/: ci.yml  publish-clients.yml
clients/csharp/: .gitignore  CarbonFiles.Client.csproj  CarbonFilesClient.cs  CarbonFilesClientOptions.cs  CarbonFilesException.cs  README.md
clients/csharp/Events/: CarbonFilesEvents.cs
clients/python/: README.md  pyproject.toml
clients/python/src/carbonfiles/: __init__.py  async_client.py  client.py  exceptions.py
clients/python/src/carbonfiles/models/: __init__.py  keys.py  stats.py  tokens.py
clients/python/src/carbonfiles/resources/: buckets.py  dashboard.py  files.py  keys.py  short_urls.py  stats.py  tokens.py
clients/python/tests/: test_admin.py  test_buckets.py  test_files.py  test_serialization.py  test_uploads.py
clients/typescript/: README.md  package.json
docs/: DEPLOYMENT.md
docs/plans/: 2026-03-03-aot-reenablement-design.md  2026-03-03-aot-reenablement.md  2026-03-04-python-client-design.md  2026-03-04-python-client-implementation.md  2026-03-04-unified-docs.md
src/CarbonFiles.Api/: CarbonFiles.Api.csproj  Program.cs
src/CarbonFiles.Infrastructure/: CarbonFiles.Infrastructure.csproj  DependencyInjection.cs
src/CarbonFiles.Migrator/: Program.cs
tests/CarbonFiles.Api.Tests/: AotSmokeTests.cs  AssemblyInfo.cs
tests/CarbonFiles.Client.Tests/: HttpTransportTests.cs  MockHandler.cs
tests/CarbonFiles.E2E.Tests/: E2EFixture.cs
tests/CarbonFiles.Infrastructure.Tests/: CarbonFiles.Infrastructure.Tests.csproj
(+90 files in other folders)
