[project]
name = "carbonfiles-client"
version = "0.0.0"
description = "Python SDK for CarbonFiles API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
events = ["signalr-async>=3.0,<4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carbonfiles"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP", "E", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
